--- a/NEURODASH/index.html
+++ b/NEURODASH/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-lg-7 aling-item-centerN">
                         <div class="cont">
-                            <a class="brutalist-button" href="views/login.html">
+                            <a class="brutalist-button" href="views/forms/login.html">
                                 <div class="ms-logo">
                                     <img src="assets/img/pagina/iniciar-sesion.png" alt="logo-sesion" class="tm-log-gl">
                                 </div>
@@ -111,7 +111,7 @@
 
     <!-- script locales -->
     <script type="module" src="assets/js/main.js"></script>
-    <script src="assets/js/sound/sonido.js"></script>
+    <!-- <script src="assets/js/sound/sonido.js"></script> -->
     <script src="lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
 </body>
