--- a/NEURODASH/index.html
+++ b/NEURODASH/index.html
@@ -109,6 +109,13 @@
         </div>
     </div>
 
+    <div class="loader-default">
+        <div class="loader-circle-9">
+            Loading
+            <span></span>
+        </div>
+    </div>
+
     <!-- script locales -->
     <script type="module" src="assets/js/main.js"></script>
     <!-- <script src="assets/js/sound/sonido.js"></script> -->
