--- a/model/index.html
+++ b/model/index.html
@@ -86,7 +86,20 @@
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="pages/usuario/usuario.html">Usuarios</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">tipos</a></li>
+                <!-- <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">tipos</a></li> -->
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" href="#juegosAdm" aria-expanded="false" aria-controls="ui-basic">
+              <i class="mdi mdi-circle-outline menu-icon"></i>
+              <span class="menu-title">Juego</span>
+              <i class="menu-arrow"></i>
+            </a>
+            <div class="collapse" id="juegosAdm">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="pages/config-game/rangos.html">Rangos</a></li>
+                <!-- <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">tipos</a></li> -->
               </ul>
             </div>
           </li>
