--- a/NEURODASH/index.html
+++ b/NEURODASH/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button class="button-play">
+                    <button class="button-play sound-sys">
                         P L A Y
                         <div id="clip">
                             <div id="leftTop" class="corner"></div>
@@ -38,6 +38,7 @@
                 </div>
             </div>
         </section>
+    
 
         <!-- interfaz inicial del juego -->
         <section class="login-invit disabled">
@@ -50,7 +51,7 @@
                     </div>
                     <div class="col-lg-7 aling-item-centerN">
                         <div class="cont">
-                            <a class="brutalist-button" href="views/forms/login.html">
+                            <a class="brutalist-button sound-sys" href="views/forms/login.html">
                                 <div class="ms-logo">
                                     <img src="assets/img/pagina/iniciar-sesion.png" alt="logo-sesion" class="tm-log-gl">
                                 </div>
@@ -58,7 +59,7 @@
                                     <span class="text-descripcion">Iniciar session</span>
                                 </div>
                             </a>
-                            <a class="brutalist-button" href="views/invitado/invitado_home.html">
+                            <a class="brutalist-button sound-sys" href="views/invitado/invitado_home.html">
                                 <div class="ms-logo">
                                     <img src="assets/img/pagina/invitado-icon.png" alt="logo-sesion" class="tm-log-gl">
                                 </div>
@@ -93,9 +94,11 @@
                 <h1 class="text-center font-2 text-decoration-underline">NEURODASH</h1>
                 <figure></figure>
                 <p class="font-2 text-justify fs-5">
-                    ¡Bienvenido a MEMORIZE-NUZIT! Un emocionante juego de memoria diseñado para poner a prueba y mejorar tus habilidades cognitivas. 
-                    Prepárate para desafíos que fortalecerán tu concentración, retención y capacidad de tomar decisiones, todo mientras te diviertes. 
-                    ¿Estás listo para poner a prueba tu memoria y superar tus propios límites? ¡Comienza a jugar y descubre hasta dónde puedes llegar!
+                    Bienvenido a NEURODASH!
+                    Un emocionante juego de memoria para mejorar tus habilidades cognitivas. 
+                    Enfrenta desafíos que fortalecerán tu concentración, memoria y agudeza mental en una experiencia interactiva y motivadora.
+                    Con modos individuales y multijugador, un sistema de puntos y seguimiento de tu progreso, ¡diviértete mientras te superas! 
+                    ¿Estás listo para comenzar y descubrir hasta dónde puedes llegar?
                 </p>
             </div>
             <div class="modal-footer modal-nuzit-footer">
